<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sparrow</string>

    <string name="api_version">API Version</string>
    <string name="adaptor_name">Adaptor Name</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="distance_cm_">Distance (cm)</string>
    <string name="angle_degrees_">Angle (°)</string>
    <string name="drone_adaptors">Drone Adaptors</string>
    <string name="sdk_version">SDK Version</string>
    <string name="adaptor_version">Adaptor Version</string>
    <string name="select_adaptor">Select Adaptor</string>
    <string name="not_connected">Not Connected</string>
    <string name="sensor_data">Sensor Data</string>
    <string name="x_axis_">X-Axis: </string>
    <string name="y_axis_">Y-Axis: </string>
    <string name="z_axis_">Z-Axis: </string>
    <string name="sensor_output_title">Sensor Output Title</string>
    <string name="sensor_output_1">Sensor Output 1</string>
    <string name="sensor_output_2">Sensor Output 2</string>
    <string name="sensor_output_3">Sensor Output 3</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="magnetic">Magnetic</string>
    <string name="lidar">LIDAR</string>
    <string name="rplidar">RPLIDAR</string>
    <string name="gps">GPS</string>
    <string name="ultrasonic">Ultrasonic</string>
    <string name="longatude">Longatude</string>
    <string name="latitude">Latitude</string>
    <string name="altitude">Altitude</string>
    <string name="bearing">Bearing</string>
    <string name="accuracy">Accuracy</string>
    <string name="collapseSensors">Collapse Sensors</string>
    <string name="expandSensors">Expand Sensors</string>
    <string name="log_data">Logs</string>
    <string name="collapseLog">Collapse Log</string>
    <string name="expandLog">Expand Log</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="camera">Camera</string>


    <!--<string name="ioio">IOIO</string>-->


    <!-- DJI strings -->
    <string name="ERR_DESCRIPTION_RESULT_FAILED">Result failed</string>
    <string name="ERR_DESCRIPTION_GET_SMART_BATTERY_INFO_FAILED">Get smart battery info failed</string>
    <string name="ERR_DESCRIPTION_CANNOT_SET_PARAM_IN_THIS_STATE">Can not set the parameters in this state</string>
    <string name="ERR_DESCRIPTION_GET_REMOTE_NO_MEDIA">Get remote no media</string>
    <string name="ERR_DESCRIPTION_GET_REMOTE_MEDIA_HTTP_ERROR">Get remote media http error</string>
    <string name="ERR_DESCRIPTION_GET_REMOTE_MEDIA_FAILED">Get remote media failed</string>
    <string name="ERR_DESCRIPTION_GET_THUMBNAIL_FAILED">Thumbnail bitmap get failed</string>
    <string name="ERR_DESCRIPTION_CAM_NOT_USB_STATE">Camera not usb state</string>
    <string name="ERR_DESCRIPTION_PLUS_GIMBAL_MOTOR">Gimbal Motor Error</string>
    <string name="ERR_DESCRIPTION_PLUS_REMOVE_LOCK">Remove Gimbal Clamp</string>
    <string name="ERR_DESCRIPTION_CONNECTTION_NOT_OK">Connection is not ok</string>
    <string name="ERR_DESCRIPTION_UNSUPPORT">Not supported</string>
    <string name="ERR_DECRIPTION_CMD_RECV_PACK_NULL">Recv pack null</string>
    <string name="ERR_DECRIPTION_PARAM_IILEGAL">Param illegal</string>
    <string name="DESCRIPTION_RESULT_OK">OK</string>
    <string name="ERR_DECRIPTION_CAM_UNSUPPORT_CMD">Camera unsuppot cmd</string>
    <string name="ERR_DECRIPTION_CAM_EXEC_TIMEOUT">Camera exec timeout</string>
    <string name="ERR_DECRIPTION_CAM_MEMALLOC_FAILED">Camera memalloc failed</string>
    <string name="ERR_DECRIPTION_CAM_INVALID_PARAM">Camera invalid param</string>
    <string name="ERR_DECRIPTION_CAM_UNSUPPORT_CMD_STATE">Camera unsupport cmd state</string>
    <string name="ERR_DECRIPTION_CAM_TIME_NO_SYNC">Camera time is not sync</string>
    <string name="ERR_DECRIPTION_CAM_PARAM_SET_FAILED">Camera param set failed</string>
    <string name="ERR_DECRIPTION_CAM_PARAM_GET_FAILED">Camera param get failed</string>
    <string name="ERR_DECRIPTION_CAM_NO_SDCARD">Camera no sdcard</string>
    <string name="ERR_DECRIPTION_CAM_SDCARD_FULL">Camera sdcard full</string>
    <string name="ERR_DECRIPTION_CAM_SDCARD_ERROR">Camera sdcard error</string>
    <string name="ERR_DECRIPTION_CAM_SENSOR_ERROR">Camera sensor error</string>
    <string name="ERR_DECRIPTION_CAM_SYSTEM_ERROR">Camera system error</string>
    <string name="ERR_DECRIPTION_RESULT_SUCCEED">Cammand have been executed</string>
    <string name="ERR_DECRIPTION_RESULT_MATCH_FAILED">Result match failed</string>
    <string name="ERR_DECRIPTION_CAM_PARAM_NOT_AVAILABLE">Camera param length invalid</string>
    <string name="ERR_DECRIPTION_FM_NONSEQUENCE">Firmware not sequence</string>
    <string name="ERR_DECRIPTION_FM_LENGTH_WRONG">Firmware length invalid</string>
    <string name="ERR_DECRIPTION_FM_CRC_WRONG">Firmware crc value invalid</string>
    <string name="ERR_DECRIPTION_FLASH_C_WRONG">Flash clear error</string>
    <string name="ERR_DECRIPTION_FLASH_W_WRONG">Flash write error</string>
    <string name="ERR_DECRIPTION_UPDATE_WRONG">Update error</string>
    <string name="ERR_DECRIPTION_FIRM_MATCH_WRONG">Firmware match error</string>
    <string name="ERR_DECRIPTION_FLASH_FLUSHING">Firmware flushing</string>
    <string name="ERR_DECRIPTION_UNDEFINED">Undefined error</string>
    <string name="ERR_DECRIPTION_TIMEOUT">Execed timeout</string>
    <string name="ERR_COULD_NOT_DELETE_ALL_FILE">Could not delete all file</string>

    <string name="DetailCheckPermissionSuccess">Check permission successful</string>
    <string name="ErrorDetailCheckPermissionConnectInternet">Cannot connect to internet</string>
    <string name="ErrorDetailCheckPermissionEmptyAppKey">App Key is empty, please input the correct App Key or Create an App Key on dev.dji.com</string>
    <string name="ErrorDetailCheckPermissionInvalidAppKey">Invalid app key. The app key is make in 24 characters and numbers.</string>
    <string name="ErrorDetailCheckPermissionGetServerDataTimeout">Get server permission data timeout</string>
    <string name="ErrorDetailCheckPermissionDeviceNotMatch">Device uuid not match</string>
    <string name="ErrorDetailCheckPermissionPackageNameNotMatch">Project package name not match</string>
    <string name="ErrorDetailCheckPermissionAppKeyProhibited">App key forbidden</string>
    <string name="ErrorDetailCheckPermissionActivationExceed">Active device num is up to the most allow num</string>
    <string name="ErrorDetailCheckPermissionAppKeyPlatfromError">App key platform error</string>
    <string name="ErrorDetailCheckPermissionAppKeyNotExist">APP key not exist</string>
    <string name="ErrorDetailCheckPermissionAppKeyNoPermission">APP key no permission</string>
    <string name="ErrorDetailCheckPermissionServerParseFailure">Server parser failed</string>
    <string name="ErrorDetailCheckPermissionServerWriteError">Server data abnormal</string>
    <string name="ErrorDetailCheckPermissionServerDataAbnormal">Server data abnormal</string>
    <string name="ErrorDetailCheckPermissionInvalidMetaData">Server meta data parer failed</string>
    <string name="ErrorDetailCheckPermissionUnsportAesEncrypt">AES 256 encrypt unsupport</string>
    <string name="ErrorDetailCheckPermissionAesEncryptFailed">AES 256 encrypt failed</string>
    <string name="ErrorDetailCheckPermissionInvalidUUID">Get device uuid failed</string>
    <string name="ErrorDetailCheckPermissionServerUnknown">Server unkown error</string>
    <string name="ErrorDetailCheckPermissionLevelisLow">Your current app key level does not have permissions.</string>
    <string name="ErrorDetailCheckPermissionGetSupport"></string>


</resources>
