<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/drone_adaptors"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textviewVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/api_version"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:headerDividersEnabled="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonSelectAdaptor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_adaptor"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textViewAdaptorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adaptor_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textViewSDKVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sdk_version"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textViewAdaptorVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adaptor_version"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
